Implement Phase 6.1 generation sampling